--- a/backend/wp-content/themes/rschip/shop/shop.html
+++ b/backend/wp-content/themes/rschip/shop/shop.html
@@ -418,7 +418,7 @@
             <div class="iconChat svg-iconChat svg-iconChat-box"></div>
         </div>
         <div class="chatContainer">
-            <div class="chatBtnClose">x</div>
+            <div class="chatBtnClose"> </div>
             <h3 class="chatTitle"> <span class="page_red">Chat </span>with us</h3>
             <div class="chatItems">
                 <div class="chatItem"><i class="icon svg-iconEmailGray svg-iconEmailGray-box"></i><a class="email"
@@ -431,7 +431,8 @@
                 <div class="chatItem"><i class="icon svg-iconChatGray svg-iconChatGray-box"></i>
                     <p>Online chat support 24/7</p>
                 </div>
-            </div><a class="chatBtn page__btn page__btn_notTransparent" href="javascript:void(0)">CHAT VIA FACEBOOK</a>
+            </div><a class="chatBtn page__btn page__btn_notTransparent"
+                href="https://www.facebook.com/rschipchiptuningusa/" target="_blank">CHAT VIA FACEBOOK</a>
         </div>
     </section>
     <section class="modal modalNews" data-modal="modalNews"> <button
